@startuml enterprise-kb-erd

' ────────────────────────────────────────────────────────
' 企业知识库 — 数据库 ER 图（基础用户/空间/会话体系）
'
' 注：标准（非 Markdown）RAG 竖井已全退役，迁移 031 删除了
'     documents / document_chunks / document_assets /
'     document_relations / tags / document_tags 六张表，故本图不再绘制。
'     Markdown RAG（md_documents / md_parent_chunk / md_child_chunk /
'     md_document_asset）及客服、投诉、Trace、Eval 等表由各自模块单独维护，
'     不在此基础图中展开。
' ────────────────────────────────────────────────────────

left to right direction

skinparam linetype ortho
skinparam roundcorner 5
skinparam shadowing false
skinparam nodesep 60
skinparam ranksep 80
skinparam class {
    BackgroundColor #FAFAFA
    BorderColor     #888888
    ArrowColor      #555555
    HeaderBackgroundColor #4A90D9
    HeaderFontColor white
    FontName Helvetica
}

' ══════════════════════════════════════════════════════
' 列 1：基础用户体系
' ══════════════════════════════════════════════════════

together {
    entity "roles" as roles {
        * id              : UUID <<PK>>
        --
        * name            : VARCHAR(50) <<UNIQUE>>
          description     : TEXT
        * created_at      : TIMESTAMPTZ
    }

    entity "users" as users {
        * id              : UUID <<PK>>
        --
        * username        : VARCHAR(100) <<UNIQUE>>
        * email           : VARCHAR(255) <<UNIQUE>>
        * password_hash   : VARCHAR(255)
          full_name       : VARCHAR(255)
        * is_active       : BOOLEAN
        * created_at      : TIMESTAMPTZ
        * updated_at      : TIMESTAMPTZ
          deleted_at      : TIMESTAMPTZ
    }
}

' ══════════════════════════════════════════════════════
' 列 2：Token + 空间
' ══════════════════════════════════════════════════════

together {
    entity "refresh_tokens" as refresh_tokens {
        * id              : UUID <<PK>>
        --
        * user_id         : UUID <<FK>>
        * token_hash      : VARCHAR(255) <<UNIQUE>>
        * expires_at      : TIMESTAMPTZ
          revoked_at      : TIMESTAMPTZ
        * created_at      : TIMESTAMPTZ
    }

    entity "spaces" as spaces {
        * id                       : UUID <<PK>>
        --
        * name                     : VARCHAR(255)
        * slug                     : VARCHAR(100) <<UNIQUE>>
          description              : TEXT
        * owner_id                 : UUID <<FK>>
          preferred_model_provider : VARCHAR(30)
        * is_active                : BOOLEAN
        * created_at               : TIMESTAMPTZ
        * updated_at               : TIMESTAMPTZ
          deleted_at               : TIMESTAMPTZ
    }
}

' ══════════════════════════════════════════════════════
' 列 3：空间成员 + 审计日志
' ══════════════════════════════════════════════════════

together {
    entity "user_space_roles" as user_space_roles {
        * id          : UUID <<PK>>
        --
        * user_id     : UUID <<FK>>
        * space_id    : UUID <<FK>>
        * role_type   : VARCHAR(20)
        * granted_at  : TIMESTAMPTZ
          granted_by  : UUID
        --
        <<UNIQUE (user_id, space_id, role_type)>>
    }

    entity "audit_logs" as audit_logs {
        * id            : UUID <<PK>>
        --
          user_id       : UUID
          space_id      : UUID
        * action        : VARCHAR(100)
          resource_type : VARCHAR(50)
          resource_id   : VARCHAR(100)
          ip_address    : INET
          user_agent    : TEXT
          payload       : JSONB
        * created_at    : TIMESTAMPTZ
    }
}

' ══════════════════════════════════════════════════════
' 列 4：问答会话
' ══════════════════════════════════════════════════════

together {
    entity "qa_sessions" as qa_sessions {
        * id          : UUID <<PK>>
        --
        * space_id    : UUID <<FK>>
        * user_id     : UUID <<FK>>
        * title       : VARCHAR(200)
        * created_at  : TIMESTAMPTZ
        * updated_at  : TIMESTAMPTZ
          deleted_at  : TIMESTAMPTZ
        --
        <<IDX (space_id, user_id) WHERE deleted_at IS NULL>>
    }

    entity "qa_messages" as qa_messages {
        * id          : UUID <<PK>>
        --
        * session_id  : UUID <<FK>>
        * role        : VARCHAR(20)
        * content     : TEXT
        * created_at  : TIMESTAMPTZ
    }
}

' roles 无实际连线，锚定到 users 下方（同列）
users            -[hidden]down-   roles

' audit_logs 无实际连线，锚定到 user_space_roles 下方（同列）
user_space_roles -[hidden]down-   audit_logs

' qa 实体锚定到 audit_logs 右侧/下方
audit_logs       -[hidden]right-  qa_sessions
qa_sessions      -[hidden]down-   qa_messages

' ══════════════════════════════════════════════════════
' 关系定义（按列从左到右，减少连线跨越）
' ══════════════════════════════════════════════════════

' 列1 → 列2
users           ||--o{  refresh_tokens     : "user_id"
users           ||--o{  spaces             : "owner_id"

' 列2 → 列3
users           ||--o{  user_space_roles   : "user_id"
spaces          ||--o{  user_space_roles   : "space_id"

' 问答会话关系
users           ||--o{  qa_sessions        : "user_id"
spaces          ||--o{  qa_sessions        : "space_id"
qa_sessions     ||--o{  qa_messages        : "session_id"

@enduml
